# cross-compiling-workshop

./: .gitignore  Dockerfile  Dockerfile.native-aarch64-builder  Dockerfile.native-ubuntu20-aarch64-builder  README.md  build-aarch64-with-cmake.sh  build-aarch64-with-docker.sh  build-aarch64-with-native-docker.sh  build-aarch64-with-qemu.sh  build-native-cmake.sh  build-native-manual.sh  build-native-with-docker.sh  build-rpi-armhf-with-cmake.sh  build-ubuntu20-aarch64-with-cmake.sh  build-ubuntu20-aarch64-with-native-docker.sh  build-ubuntu20-native-with-docker.sh
app/: CMakeLists.txt  main.cpp
app/cmake/: armhf-linux-gnu.toolchain.cmake
app/cmake/Modules/: FindPCAP.cmake
scripts/: benchmark.sh  build-all.sh
scripts/ci/: Dockerfile  shell.sh
